<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/textViewName"
        android:layout_width="376dp"
        android:layout_height="43dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="18dp"
        android:text="@string/textViewName"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSurname"
        android:layout_width="376dp"
        android:layout_height="43dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="18dp"
        android:text="@string/textViewSurname"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="376dp"
        android:layout_height="43dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="18dp"
        android:text="@string/textViewEmail"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewNumber"
        android:layout_width="376dp"
        android:layout_height="43dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="18dp"
        android:text="@string/textViewNumber"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSubject"
        android:layout_width="376dp"
        android:layout_height="43dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="248dp"
        android:layout_marginEnd="18dp"
        android:text="@string/textViewSubject"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>