<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InstructorFragment"
    android:background="@color/theme">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="#466E6A">

        <TextView
            android:id="@+id/enterDataTextView"
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="20dp"
            android:text="@string/enterDataTextView"
            android:textColor="#C1C8C7"
            android:textSize="30sp"
            android:textStyle="italic"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/dataLayout"
           />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/dataLayout"
            android:layout_width="match_parent"
            android:layout_height="610dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/layout_round_bg"
            app:layout_constraintBottom_toBottomOf="parent"


            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/enterDataTextView">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TextInputLayoutName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="22dp"

                app:layout_constraintBottom_toTopOf="@+id/TextInputLayoutSurname"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/ic_person">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/editTextName"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TextInputLayoutSurname"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="22dp"


                app:layout_constraintBottom_toTopOf="@+id/TextInputLayoutEmail"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TextInputLayoutName"
                app:startIconDrawable="@drawable/ic_person">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextSurname"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/editTextSurname"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TextInputLayoutEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="22dp"

                app:layout_constraintBottom_toTopOf="@+id/TextInputLayoutPhoneNumber"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TextInputLayoutSurname"
                app:startIconDrawable="@drawable/ic_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:hint="@string/editTextEmail"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TextInputLayoutPhoneNumber"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="22dp"

                app:layout_constraintBottom_toTopOf="@+id/TextInputLayoutSubject"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TextInputLayoutEmail"
                app:startIconDrawable="@drawable/ic_phone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:hint="@string/editTextPhoneNumber"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TextInputLayoutSubject"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="22dp"

                app:layout_constraintBottom_toTopOf="@+id/addButton"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/TextInputLayoutPhoneNumber"
                app:startIconDrawable="@drawable/ic_book">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextSubject"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/editTextSubject"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button

                android:id="@+id/addButton"

                android:layout_width="200dp"
                android:layout_height="65dp"
                android:layout_marginBottom="100dp"

                android:backgroundTint="@color/theme"
                android:text="@string/addButton"
                android:textColor="#C1C8C7"
                android:textSize="30sp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"


                app:layout_constraintTop_toBottomOf="@id/TextInputLayoutSubject" />

            <Button

                android:id="@+id/nextButton"

                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_marginBottom="0dp"


                android:backgroundTint="@color/theme"
                android:text="@string/nextButton"
                android:textColor="#C1C8C7"
                android:textSize="30sp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"


                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addButton"
             />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>